--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -82,6 +82,7 @@
         wareId = $('#wareId' + id).html();
       }
       if(number.length === 0) {
+        // console.log("change");
         number = $('#number' + id).html();
       }
       if (spec.length === 0) {
@@ -104,31 +105,63 @@
     }
   </script>
   <!--    打开页面取得货物列表-->
+<!--  <script>-->
+<!--    $.ajax({-->
+<!--      type: "GET",-->
+<!--      url: "/goods/allGoods",-->
+<!--      dataType:"json",-->
+<!--      success: function (list) {-->
+<!--        if (list !== null) {-->
+<!--          for(var i = 0; i < list.length; i++){-->
+<!--            var id = list[i].goodsId;-->
+<!--            var name = list[i].goodsName;-->
+<!--            var spec = list[i].goodsSpecification;-->
+<!--            var wareId = list[i].warehouseId;-->
+<!--            var number = list[i].goodsNumber;-->
+<!--            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>-->
+<!--<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;-->
+<!--            insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>-->
+<!--<button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;-->
+<!--            $("#goods").append(insert);-->
+<!--          }-->
+<!--        }-->
+
+<!--      },-->
+<!--      error: function () {-->
+<!--        alert("获取失败！");-->
+<!--      }-->
+<!--    })-->
+
+<!--  </script>-->
   <script>
-    $.ajax({
-      type: "GET",
-      url: "/goods/allGoods",
-      dataType:"json",
-      success: function (list) {
-        if (list !== null) {
-          for(var i = 0; i < list.length; i++){
-            var id = list[i].goodsId;
-            var name = list[i].goodsName;
-            var spec = list[i].goodsSpecification;
-            var wareId = list[i].warehouseId;
-            var number = list[i].goodsNumber;
-            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+    function get(){
+      $.ajax({
+        type: "GET",
+        url: "/goods/allGoods",
+        dataType:"json",
+        success: function (list) {
+          if (list !== null) {
+            for(var i = 0; i < list.length; i++){
+              var id = list[i].goodsId;
+              var name = list[i].goodsName;
+              var spec = list[i].goodsSpecification;
+              var wareId = list[i].warehouseId;
+              var number = list[i].goodsNumber;
+              let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
-            insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>
+              insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>
 <button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
-            $("#goods").append(insert);
+              $("#goods").append(insert);
+            }
           }
+
+        },
+        error: function () {
+          alert("获取失败！");
         }
-      },
-      error: function () {
-        alert("获取失败！");
-      }
-    })
+      })
+
+    }
 
   </script>
   <!--    删除货物-->
@@ -149,8 +182,11 @@
       })
     }
   </script>
+  <script>
+    location.reload()
+  </script>
 </head>
-<body>
+<body onload="get()">
   <div class="app" id="app">
 
 <!-- ############ LAYOUT START-->
@@ -314,6 +350,32 @@
                     </i>
                   </span>
                   <span class="nav-text">库存统计查询</span>
+                </a>
+              </li>
+              <li class="nav-header hidden-folded">
+                <small class="text-muted">仓库管理</small>
+              </li>
+              <li>
+                <a href="newWarehouseManage.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe1b8;
+                      <span ui-include="'assets/images/i_8.svg'"></span>
+                    </i>
+                  </span>
+                  <span class="nav-text">仓库管理</span>
+                </a>
+              </li>
+              <li class="nav-header hidden-folded">
+                <small class="text-muted">收银台</small>
+              </li>
+              <li>
+                <a href="checkoutCounter.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe896;
+                      <span ui-include="'assets/images/i_7.svg'"></span>
+                    </i>
+                  </span>
+                  <span class="nav-text">收银台</span>
                 </a>
               </li>
             </ul>
