--- a/src/main/webapp/newQueryCustomer.html
+++ b/src/main/webapp/newQueryCustomer.html
@@ -46,13 +46,15 @@
                             var tel = list[i].customerTel;
                             var sellOrders = list[i].historySellOrderId;
 
-                            let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>`;
+                            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>`;
                             if (sellOrders !== null){
                                 insert += `<td><table>`;
                                 for (var j = 0; j <sellOrders.length; j++){
                                     insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
                                 }
                                 insert += `</table></td>`;
+                            } else {
+                                insert += `<td>无</td>`
                             }
                             insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td></tr>`;
                             $("#customerTable").append(insert);
@@ -270,6 +272,32 @@
                     </i>
                   </span>
                                 <span class="nav-text">库存统计查询</span>
+                            </a>
+                        </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">仓库管理</small>
+                        </li>
+                        <li>
+                            <a href="newWarehouseManage.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe1b8;
+                      <span ui-include="'assets/images/i_8.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">仓库管理</span>
+                            </a>
+                        </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">收银台</small>
+                        </li>
+                        <li>
+                            <a href="checkoutCounter.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe896;
+                      <span ui-include="'assets/images/i_7.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">收银台</span>
                             </a>
                         </li>
                     </ul>
