--- a/src/main/webapp/newQueryGoods.html
+++ b/src/main/webapp/newQueryGoods.html
@@ -31,7 +31,7 @@
 
     <!--    查找货品函数-->
     <script>
-        function queryGoods(name){
+        function newQueryGoods(name){
             $("#goods").html('');
             $.ajax({
                 type: "GET",
@@ -89,6 +89,7 @@
     <!--    提交修改表格-->
     <script>
         function changeOver(id) {
+
             var name = $("#goodsName").val();
             var spec = $("#spec").val();
             if (name.length === 0) {
@@ -99,9 +100,9 @@
             }
             $.ajax({
                 type:"GET",
-                url : "/customer/update",
+                url : "/goods/update",
                 dataType: "json",
-                data: {goodsName: name, spec: spec},
+                data: {id:id, goodsName: name, spec: spec},
                 success: function (list) {
                     alert("修改成功！");
                     location.reload();
@@ -297,6 +298,32 @@
                                 <span class="nav-text">库存统计查询</span>
                             </a>
                         </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">仓库管理</small>
+                        </li>
+                        <li>
+                            <a href="newWarehouseManage.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe1b8;
+                      <span ui-include="'assets/images/i_8.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">仓库管理</span>
+                            </a>
+                        </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">收银台</small>
+                        </li>
+                        <li>
+                            <a href="checkoutCounter.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe896;
+                      <span ui-include="'assets/images/i_7.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">收银台</span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -375,7 +402,7 @@
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" placeholder="货物名字" id="goodsName">
                                 <span class="input-group-btn">
-        <button class="btn b-a no-shadow white" type="button" onclick="queryGoods($('#goodsName').val())">查询</button>
+        <button class="btn b-a no-shadow white" type="button" onclick="newQueryGoods($('#goodsName').val())">查询</button>
       </span>
                             </div>
                         </form>
