--- a/src/main/webapp/newStockQuery.html
+++ b/src/main/webapp/newStockQuery.html
@@ -226,6 +226,32 @@
                                 <span class="nav-text">库存统计查询</span>
                             </a>
                         </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">仓库管理</small>
+                        </li>
+                        <li>
+                            <a href="newWarehouseManage.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe1b8;
+                      <span ui-include="'assets/images/i_8.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">仓库管理</span>
+                            </a>
+                        </li>
+                        <li class="nav-header hidden-folded">
+                            <small class="text-muted">收银台</small>
+                        </li>
+                        <li>
+                            <a href="checkoutCounter.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe896;
+                      <span ui-include="'assets/images/i_7.svg'"></span>
+                    </i>
+                  </span>
+                                <span class="nav-text">收银台</span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
