--- a/src/main/webapp/newWarehouseManage.html
+++ b/src/main/webapp/newWarehouseManage.html
@@ -193,174 +193,200 @@
 <!-- ############ LAYOUT START-->
 
   <!-- aside -->
-    <div id="aside" class="app-aside modal fade lg nav-dropdown">
-      <div class="left navside grey dk" layout="column">
-        <div class="navbar no-radius">
-          <!-- brand -->
-          <a class="navbar-brand">
-            <div ui-include="'assets/images/logo.svg'"></div>
-            <span class="hidden-folded inline">智能管理系统</span>
-          </a>
-          <!-- / brand -->
-        </div>
-        <div flex class="hide-scroll">
-          <nav class="scroll nav-border b-primary">
+      <div id="aside" class="app-aside modal fade lg nav-dropdown">
+          <div class="left navside grey dk" layout="column">
+              <div class="navbar no-radius">
+                  <!-- brand -->
+                  <a class="navbar-brand">
+                      <div ui-include="'assets/images/logo.svg'"></div>
+                      <span class="hidden-folded inline">智能管理系统</span>
+                  </a>
+                  <!-- / brand -->
+              </div>
+              <div flex class="hide-scroll">
+                  <nav class="scroll nav-border b-primary">
 
-            <ul class="nav" ui-nav>
-              <li class="nav-header hidden-folded">
-                <small class="text-muted">货品资料维护</small>
-              </li>
+                      <ul class="nav" ui-nav>
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">货品资料维护</small>
+                          </li>
 
-              <li>
-                <a href="newGoodsList.html" >
+                          <li>
+                              <a href="newGoodsList.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">货品列表</span>
-                </a>
-              </li>
-              <li>
-                <a href="newAddGoods.html" >
+                                  <span class="nav-text">货品列表</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newAddGoods.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">添加货品</span>
-                </a>
-              </li>
-              <li>
-                <a href="newQueryGoods.html" >
+                                  <span class="nav-text">添加货品</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newQueryGoods.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">查询货品</span>
-                </a>
-              </li>
+                                  <span class="nav-text">查询货品</span>
+                              </a>
+                          </li>
 
-              <li class="nav-header hidden-folded">
-                <small class="text-muted">客户资料维护</small>
-              </li>
-              <li>
-                <a href="newCustomerList.html" >
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">客户资料维护</small>
+                          </li>
+                          <li>
+                              <a href="newCustomerList.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">客户列表</span>
-                </a>
-              </li>
-              <li>
-                <a href="newAddCustomer.html" >
+                                  <span class="nav-text">客户列表</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newAddCustomer.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">添加客户</span>
-                </a>
-              </li>
-              <li>
-                <a href="newQueryCustomer.html" >
+                                  <span class="nav-text">添加客户</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newQueryCustomer.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe3e8;
                       <span ui-include="'assets/images/i_5.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">查询客户</span>
-                </a>
-              </li>
+                                  <span class="nav-text">查询客户</span>
+                              </a>
+                          </li>
 
-              <li class="nav-header hidden-folded">
-                <small class="text-muted">销售业务管理</small>
-              </li>
-              <li>
-                <a href="newCreateSellOrder.html" >
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">销售业务管理</small>
+                          </li>
+                          <li>
+                              <a href="newCreateSellOrder.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">开销售单</span>
-                </a>
-              </li>
-              <li>
-                <a href="newUnexaminedList.html" >
+                                  <span class="nav-text">开销售单</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newUnexaminedList.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">未审核订单</span>
-                </a>
-              </li>
-              <li>
-                <a href="newUnpaidList.html" >
+                                  <span class="nav-text">未审核订单</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newUnpaidList.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">已审核未付款订单</span>
-                </a>
-              </li>
-              <li>
-                <a href="newPaidList.html" >
+                                  <span class="nav-text">已审核未付款订单</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newPaidList.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe39e;
                       <span ui-include="'assets/images/i_6.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">已付款订单</span>
-                </a>
-              </li>
+                                  <span class="nav-text">已付款订单</span>
+                              </a>
+                          </li>
 
-              <li class="nav-header hidden-folded">
-                <small class="text-muted">库存管理</small>
-              </li>
-              <li>
-                <a href="newJinHuo.html" >
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">库存管理</small>
+                          </li>
+                          <li>
+                              <a href="newJinHuo.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">进货</span>
-                </a>
-              </li>
-              <li>
-                <a href="index.html" >
+                                  <span class="nav-text">进货</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="index.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">库存盘点</span>
-                </a>
-              </li>
-              <li>
-                <a href="newStockQuery.html" >
+                                  <span class="nav-text">库存盘点</span>
+                              </a>
+                          </li>
+                          <li>
+                              <a href="newStockQuery.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
                     </i>
                   </span>
-                  <span class="nav-text">库存统计查询</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div flex-no-shrink>
-          <div ui-include="'../views/blocks/aside.bottom.0.html'"></div>
-        </div>
+                                  <span class="nav-text">库存统计查询</span>
+                              </a>
+                          </li>
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">仓库管理</small>
+                          </li>
+                          <li>
+                              <a href="newWarehouseManage.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe1b8;
+                      <span ui-include="'assets/images/i_8.svg'"></span>
+                    </i>
+                  </span>
+                                  <span class="nav-text">仓库管理</span>
+                              </a>
+                          </li>
+                          <li class="nav-header hidden-folded">
+                              <small class="text-muted">收银台</small>
+                          </li>
+                          <li>
+                              <a href="checkoutCounter.html" >
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe896;
+                      <span ui-include="'assets/images/i_7.svg'"></span>
+                    </i>
+                  </span>
+                                  <span class="nav-text">收银台</span>
+                              </a>
+                          </li>
+                      </ul>
+                  </nav>
+              </div>
+              <div flex-no-shrink>
+                  <div ui-include="'../views/blocks/aside.bottom.0.html'"></div>
+              </div>
+          </div>
       </div>
-    </div>
   <!-- / aside -->
   
   <!-- content -->
