qian duan second push

--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -182,9 +182,7 @@
       })
     }
   </script>
-  <script>
-    location.reload()
-  </script>
+
 </head>
 <body onload="get()">
   <div class="app" id="app">
@@ -211,7 +209,7 @@
               </li>
 
               <li>
-                <a href="newGoodsList.html" >
+                <a onclick="window.location.href='newGoodsList.html'">
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
@@ -221,7 +219,7 @@
                 </a>
               </li>
               <li>
-                <a href="newAddGoods.html" >
+                <a onclick="window.location.href='newAddGoods.html'">
                   <span class="nav-icon">
                     <i class="material-icons">&#xe5c3;
                       <span ui-include="'assets/images/i_1.svg'"></span>
