--- a/src/main/webapp/newCreateSellOrder.html
+++ b/src/main/webapp/newCreateSellOrder.html
@@ -32,16 +32,24 @@
     <!--    开销售单：上交服务器-->
     <script>
         function addOver() {
-            var goodsId = $("#goodsId").val();
-            var price = $("#goodsPrice").val();
-            var sum = $("#goodsNumber").val();
+            var status = $("#status").val();
+            var wareId = $("#wareId").val();
             var customerId = $("#customerId").val();
             var remark = $("#remark").val();
+            var goodsId = [];
+            var price = [];
+            var number = [];
+            for(var i = 1;i<6;i++){
+                goodsId[i-1] = $("#goodid" + i).val();
+                price[i-1] = $("#price" + i).val();
+                number[i-1] = $("#number" + i).val()
+            }
             $.ajax({
                 type:"GET",
                 url : "/sellOrder/add",
                 dataType: "json",
-                data: {goodsId: goodsId, sellUnitPrice: price, sellsum: sum, customerId: customerId, remark: remark},
+                data: {warehouseId: wareId, sellOrderType: status, sellOrderRemark: remark,
+                    customerId: customerId, goodsId: goodsId, sellUnitPrice: price, goodsNumber: number},
                 success: function (bool) {
                     if (bool) {
                         alert("添加成功！");
@@ -326,16 +334,12 @@
                         <div class="tab-pane active" id="tab-1">
                             <form role="form" class="p-a-md col-md-6">
                                 <div class="form-group">
-                                    <label for="goodsId">商品ID</label>
-                                    <input type="text" class="form-control" id="goodsId">
+                                    <label for="status">销售单类型</label>
+                                    <input type="text" class="form-control" id="status">
                                 </div>
                                 <div class="form-group">
-                                    <label for="goodsPrice">商品单价</label>
-                                    <input type="text" class="form-control" id="goodsPrice">
-                                </div>
-                                <div class="form-group">
-                                    <label for="goodsNumber">总数量</label>
-                                    <input type="text" class="form-control" id="goodsNumber">
+                                    <label for="wareId">仓库ID</label>
+                                    <input type="text" class="form-control" id="wareId">
                                 </div>
                                 <div class="form-group">
                                     <label for="customerId">顾客ID</label>
@@ -345,6 +349,81 @@
                                     <label for="remark">备注</label>
                                     <input type="text" class="form-control" id="remark">
                                 </div>
+                                <table class="table table-striped b-t b-b">
+                                <thead>
+                                <tr><th>商品ID</th><th>商品单价</th><th>商品数量</th></tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <input type="text" class="form-control" id="goodid1">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="price1">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="number1">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <input type="text" class="form-control" id="goodid2">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="price2">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="number2">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <input type="text" class="form-control" id="goodid3">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="price3">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="number3">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <input type="text" class="form-control" id="goodid4">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="price4">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="number4">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <input type="text" class="form-control" id="goodid5">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="price5">
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="number5">
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                </table>
+<!--                                <div class="form-group">-->
+<!--                                    <label for="goodsPrice">商品单价</label>-->
+<!--                                    <input type="text" class="form-control" id="goodsPrice">-->
+<!--                                </div>-->
+<!--                                <div class="form-group">-->
+<!--                                    <label for="goodsNumber">总数量</label>-->
+<!--                                    <input type="text" class="form-control" id="goodsNumber">-->
+<!--                                </div>-->
+<!--                                -->
+<!--                                <div class="form-group">-->
+<!--                                    <label for="remark">备注</label>-->
+<!--                                    <input type="text" class="form-control" id="remark">-->
+<!--                                </div>-->
                                 <button type="button" class="btn btn-info m-t" onclick="addOver()">提交</button>
                             </form>
                         </div>
