--- a/src/main/webapp/newUnpaidList.html
+++ b/src/main/webapp/newUnpaidList.html
@@ -477,7 +477,7 @@
                             <h5 class="m-b-0 _300">欢迎回来！</h5>
                         </div>
                         <div class="box-header">
-                            <h2>收银台</h2>
+                            <h2>未付款订单</h2>
                         </div>
                         <!--                        从这里修改-->
                         <table class="table table-striped b-t b-b">
