修复一些问题，包括插入group

--- a/src/main/webapp/newPaidList.html
+++ b/src/main/webapp/newPaidList.html
@@ -189,7 +189,7 @@
                     location.reload();
                 },
                 error: function () {
-                    alert("退款失败！");
+                    alert("退款失败！您可能无权执行退款操作。");
                 }
             })
         }
