--- a/src/main/webapp/newCreateSellOrder.html
+++ b/src/main/webapp/newCreateSellOrder.html
@@ -40,7 +40,7 @@
             var price = '';
             var number = '';
             for(var i = 1;i<6;i++){
-                goodsId += $("goodid" + i).val();
+                goodsId += $("#goodid" + i).val();
                 goodsId += ",";
                 price += $("#price" + i).val();
                 price += ",";
